[gd_scene load_steps=3 format=3 uid="uid://cirrrfflv3dfi"]

[ext_resource type="Script" uid="uid://dqd7152mss80n" path="res://cutscene_after_upgrade3.gd" id="1_3byw0"]
[ext_resource type="FontFile" uid="uid://duf2yfwdtohl8" path="res://FONTS/retropix.ttf/retropix.ttf" id="2_lyecj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3byw0")

[node name="Panel" type="Panel" parent="."]
offset_right = 1157.0
offset_bottom = 653.0

[node name="Talk1" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 137.0
offset_right = 7339.0
offset_bottom = 1707.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0.584314, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_lyecj")
theme_override_font_sizes/normal_font_size = 400
bbcode_enabled = true

[node name="Talk2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 297.0
offset_right = 7529.0
offset_bottom = 2127.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0.584314, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_lyecj")
theme_override_font_sizes/normal_font_size = 400
bbcode_enabled = true

[node name="Talk3" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 452.0
offset_right = 8279.0
offset_bottom = 1622.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0.584314, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_lyecj")
theme_override_font_sizes/normal_font_size = 400
bbcode_enabled = true
